crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_147_Sachen3018_JV001_Chinese_KungFu_Asia_Ja_Unl.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-147-Sachen3018-JV001/Chinese KungFu (Asia) (Ja) (Unl).nes
rom_sha256=715af6314575cbe9d1fcd9bda89188c791e40116ad66690daf97dec61cbf3eb0
frames=1141
fb_bytes=245760
cycles=33949781
audio_samples=836505
audio_fnv1a64=5e2832bb1e1e89fd
checkpoint f900 fb_fnv1a64=715a7fe33141301e
checkpoint f1100 fb_fnv1a64=715a7fe33141301e
