crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_147_Sachen3018_JV001_Shao_Lin_Wuz_He_Chinese_Kung_Fu_Sachen_JAP.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-147-Sachen3018-JV001/Shao Lin Wuz He - Chinese Kung Fu (Sachen-JAP) [!].nes
rom_sha256=cfc60c4f6cee632ee71d216307c5b9671426a638374a5a6bdd68613a9e06e6a9
frames=1141
fb_bytes=245760
cycles=33949781
audio_samples=836505
audio_fnv1a64=5e2832bb1e1e89fd
checkpoint f900 fb_fnv1a64=715a7fe33141301e
checkpoint f1100 fb_fnv1a64=715a7fe33141301e
