crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_147_Sachen3018_JV001_Shao_Lin_Wuz_He_Chinese_Kung_Fu_Sachen_JAP_zip.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-147-Sachen3018-JV001/Shao Lin Wuz He - Chinese Kung Fu (Sachen-JAP) [!].zip
rom_sha256=a707d260904a408e8425665c85d9740efc7f61fede5f73a282b564b1ff7267d3
frames=1141
fb_bytes=245760
cycles=33949781
audio_samples=836505
audio_fnv1a64=5e2832bb1e1e89fd
checkpoint f900 fb_fnv1a64=715a7fe33141301e
checkpoint f1100 fb_fnv1a64=715a7fe33141301e
