crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_148_SachenSA0037_AV_Hanafuda_Club_Japan_Unl.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-148-SachenSA0037/AV Hanafuda Club (Japan) (Unl).nes
rom_sha256=64c617fbfe8185aba0ee847aeb42905d5dbd5dba87ef1c5ae55fac08264182bf
frames=1141
fb_bytes=245760
cycles=33949771
audio_samples=836505
audio_fnv1a64=4066ed76cdd4f01a
checkpoint f900 fb_fnv1a64=1ab3e35991103eb6
checkpoint f1100 fb_fnv1a64=1ab3e35991103eb6
