crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_148_SachenSA0037_AV_Hanafuda_Club_Japan_Unl_zip.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-148-SachenSA0037/AV Hanafuda Club (Japan) (Unl).zip
rom_sha256=4814ca43a3414561991bf9ed3fd86118f334fa05a1c7ecbf497f5d9e02662e8c
frames=1141
fb_bytes=245760
cycles=33949771
audio_samples=836505
audio_fnv1a64=4066ed76cdd4f01a
checkpoint f900 fb_fnv1a64=1ab3e35991103eb6
checkpoint f1100 fb_fnv1a64=1ab3e35991103eb6
