crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_148_SachenSA0037_AV_Pachi_Slot_Japan_Unl.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-148-SachenSA0037/AV Pachi-Slot (Japan) (Unl).nes
rom_sha256=f0a87e350cc8430b209ce84bc3298ba88e63d39cc2341c4bbf8b7a3f64f0b06f
frames=1141
fb_bytes=245760
cycles=33949771
audio_samples=836505
audio_fnv1a64=a880a5766fd0ef30
checkpoint f900 fb_fnv1a64=c816d858ec9ea0b1
checkpoint f1100 fb_fnv1a64=c816d858ec9ea0b1
