crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_148_SachenSA0037_Hanafuda_Yuukyou_Den_Nagarebana_Oryuu_Japan_Unl_zip.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-148-SachenSA0037/Hanafuda Yuukyou Den - Nagarebana Oryuu (Japan) (Unl).zip
rom_sha256=a030f847b0aba5689515e0106563efedd8f5521003573a60573fe3f2de44eff6
frames=1141
fb_bytes=245760
cycles=33949771
audio_samples=836505
audio_fnv1a64=bfd9dd25533f31e9
checkpoint f900 fb_fnv1a64=2ef00cee1d1a5e3c
checkpoint f1100 fb_fnv1a64=2ef00cee1d1a5e3c
