crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_148_SachenSA0037_Mahjong_World_Sachen.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-148-SachenSA0037/Mahjong World (Sachen) [!].nes
rom_sha256=a5689a70fead9fbe34e8aec93da0afdd089d6d4593266a680175dc4f451d736d
frames=1141
fb_bytes=245760
cycles=33949773
audio_samples=836505
audio_fnv1a64=ce8a6f9e83f56cf1
checkpoint f900 fb_fnv1a64=40cb33fe297d4dfa
checkpoint f1100 fb_fnv1a64=97cab30a53f730f7
